deployments/api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
      - name: api
        image: s66-cloud-services-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
