deployments/api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    component: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3333
